package settings

import (
	"context"

	desc "github.com/meetmorrowsolonmars/openpgl/settings/internal/pb/api/v1/settings"
)

func (i *Implementation) GetDefaultSettings(ctx context.Context, request *desc.GetDefaultSettingsRequest) (*desc.GetDefaultSettingsResponse, error) {
	//TODO implement me
	panic("implement me")
}
