package settings

import (
	"context"

	desc "github.com/meetmorrowsolonmars/openpgl/settings/internal/pb/api/v1/settings"
)

func (i *Implementation) GetSettings(ctx context.Context, request *desc.GetSettingsRequest) (*desc.GetSettingsResponse, error) {
	//TODO implement me
	panic("implement me")
}
